# Xornet

./: .gitignore  README.md
.github/workflows/: tests.yml
experimental/rust-reporter/: Cargo.toml
experimental/rust-reporter/src/: main.rs
reporter/lang/: it-IT.json
updater/: package-lock.json
updater/src/: App.vue  background.js
updater/src/components/: loadingScreen.vue  logo.vue
updater/src/router/: index.js
updater/src/views/: Home.vue
