[package]
name = "reporter"
version = "0.1.0"
authors = ["Niko Huuskonen <niko.huuskonen.00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.17.5"
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }
websocket = "0.26.2"
rust_socketio = "0.2.2"